--- a/client/package.json
+++ b/client/package.json
@@ -1,11 +1,16 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "proxy": "http://localhost:1818/",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
+    "dayjs": "^1.8.36",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3"
