--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "Get that cheapest piece o' pie.",
   "main": "index.js",
   "scripts": {
-    "start": "set NODE_ENV=development && nodemon app.js",
+    "start": "node app.js",
+    "dev": "set NODE_ENV=development && nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
